# Mnemonic

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: memory.jsonl
examples/: api.py  client.py  demo.py
mnemonic/: __init__.py  embedding_model.py  faiss_memory_store.py  memory_interface.py  memory_store.py  mnemonic_memory.py  utils.py
tests/: test_memory.py
